[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "example_python"
version = "0.1.0"
description = "Example Python Project"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Han Zhang", email = "zh950713@gmail.com" }
]
dependencies = [
    "numpy",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["example_python"]

[tool.hatch.version]
path = "src/example_python/__version__.py"
